# OPENCV

./: .gitignore  pyproject.toml  test_install.ipynb
class_for/: class_webcam.ipynb
class_one/: class_one.ipynb
class_three/: class_three.ipynb  class_three_webcam.ipynb
class_two/: class_two.ipynb
