[tool.poetry]
name = "opencv"
version = "0.1.0"
description = "Learn opencv"
authors = ["Gregorio Honorato"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
opencv-python = "^4.10.0.82"
numpy = "^1.26.4"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
dlib = "^19.24.4"
opencv-contrib-python = "^4.10.0.84"
scikit-learn = "^1.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
